k8s-final/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend-rawabet","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"backend-rawabet"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":0},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"backend-rawabet"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"backend-config"}},{"secretRef":{"name":"backend-secret"}}],"image":"amennahali/rawabet-backend [...]
  creationTimestamp: "2026-05-16T11:37:31Z"
  generation: 7
  name: backend-rawabet
  namespace: default
  resourceVersion: "95854"
  uid: 3d271ef6-0b9c-45c4-933b-92466881e89d
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend-rawabet
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-16T13:09:09+01:00"
      labels:
        app: backend-rawabet
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: backend-config
        - secretRef:
            name: backend-secret
        image: amennahali/rawabet-backend:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /rawabet/swagger-ui/index.html
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 80
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: backend-rawabet
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /rawabet/swagger-ui/index.html
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-05-16T15:06:02Z"
    lastUpdateTime: "2026-05-16T15:06:02Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-16T11:37:31Z"
    lastUpdateTime: "2026-05-16T17:22:00Z"
    message: ReplicaSet "backend-rawabet-67c9b94574" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
