k8s-final/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"frontend-service","namespace":"default"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"frontend-rawabet"},"type":"ClusterIP"}}
  creationTimestamp: "2026-05-16T13:31:19Z"
  name: frontend-service
  namespace: default
  resourceVersion: "82352"
  uid: 1e449e66-a2b7-4bd2-9904-d180f7a4a155
spec:
  clusterIP: 10.111.92.225
  clusterIPs:
  - 10.111.92.225
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-rawabet
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
