k8s-final/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"20m"},"name":"rawabet-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"rawabet.domaine.com","http":{"paths":[{"backend":{"service":{"name":"frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
  creationTimestamp: "2026-05-16T13:55:07Z"
  generation: 1
  name: rawabet-ingress
  namespace: default
  resourceVersion: "84006"
  uid: cd704a9c-9474-4d5e-a148-9cea6c1521f4
spec:
  ingressClassName: nginx
  rules:
  - host: rawabet.domaine.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
