k8s-final/networkpolicy-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-backend-to-mysql","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"backend-rawabet"}}}],"ports":[{"port":3306,"protocol":"TCP"}]},{"from":[{"podSelector":{"matchLabels":{"job-access":"mysql-backup"}}}],"ports":[{"port":3306,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"mysql"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-05-16T15:46:45Z"
  generation: 2
  name: allow-backend-to-mysql
  namespace: default
  resourceVersion: "89693"
  uid: f24d3fa4-9625-48d9-b010-89db2dacf835
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-rawabet
    ports:
    - port: 3306
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          job-access: mysql-backup
    ports:
    - port: 3306
      protocol: TCP
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
